--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "dotted-map": "^2.2.3",
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.454.0",
     "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.23.0",
@@ -68,6 +69,7 @@
     "react-resizable-panels": "^2.1.7",
     "react-syntax-highlighter": "^5.8.0",
     "recharts": "2.15.0",
+    "resend": "^4.6.0",
     "simplex-noise": "^4.0.3",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
@@ -78,6 +80,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
