--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
     "@hookform/resolvers": "^3.9.1",
     "@privy-io/react-auth": "^2.17.3",
     "@radix-ui/react-accordion": "1.2.2",
@@ -40,15 +41,19 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@react-three/drei": "^10.5.0",
     "@react-three/fiber": "9.0.0-alpha.8",
+    "@supabase/supabase-js": "^2.51.0",
     "@tabler/icons-react": "^3.34.0",
+    "@tanstack/react-query": "^5.83.0",
     "@tsparticles/engine": "^3.8.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.8.1",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "cobe": "^0.6.4",
+    "copy-to-clipboard": "^3.3.3",
     "date-fns": "4.1.0",
     "dotted-map": "^2.2.3",
     "embla-carousel-react": "8.5.1",
@@ -65,9 +70,11 @@
     "react-dom": "^19",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.1",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
     "react-syntax-highlighter": "^5.8.0",
+    "react-use": "^17.6.0",
     "recharts": "2.15.0",
     "resend": "^4.6.0",
     "simplex-noise": "^4.0.3",
@@ -76,6 +83,7 @@
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.178.0",
     "three-globe": "^2.43.0",
+    "use-local-storage-state": "^19.5.0",
     "vaul": "^0.9.6",
     "viem": "^2.31.7",
     "zod": "^3.24.1"
