--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     "crypto-js": "^4.2.0",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "ethers": "^6.13.2",
+    "otplib": "^12.0.1",
+    "qrcode": "^1.5.3",
     "input-otp": "1.4.1",
     "jose": "^5.2.0",
     "jsonwebtoken": "^9.0.2",
@@ -73,6 +76,7 @@
     "@types/crypto-js": "^4.2.2",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^22",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8.5",
