--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
     "@privy-io/react-auth": "^2.17.3",
+    "@privy-io/server-auth": "^1.28.5",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -48,8 +49,7 @@
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "ethers": "^6.13.2",
-    "otplib": "^12.0.1",
-    "qrcode": "^1.5.3",
+    "framer-motion": "^12.23.6",
     "input-otp": "1.4.1",
     "jose": "^5.2.0",
     "jsonwebtoken": "^9.0.2",
@@ -57,10 +57,13 @@
     "nanoid": "^5.0.4",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
+    "otplib": "^12.0.1",
+    "qrcode": "^1.5.3",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
     "react-hook-form": "^7.54.1",
+    "react-hot-toast": "^2.5.2",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "resend": "^3.2.0",
@@ -77,7 +80,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^22",
     "@types/qrcode": "^1.5.5",
-    "@types/react": "^19",
+    "@types/react": "^19.0.0",
     "@types/react-dom": "^19",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
