Add hybrid trading system and bridge docs, implement core orderbook and trading modules
Added detailed architecture and progress documentation for the hybrid trading system, deposit/bridge, and orderbook implementation. Introduced Redis and PostgreSQL configuration, new API routes for trading and health checks, core matching engine, smart router, precision utilities, and WebSocket server. Updated environment variables for Redis, improved README and CLAUDE.md with project details, and added Supabase migrations for orderbook tables. Also included Solidity contracts for HyperIndex AMM components and supporting libraries.

--- a/.env.example
+++ b/.env.example
@@ -32,5 +32,12 @@ ADMIN_EMAILS=admin@example.com,admin2@example.com
 SENTRY_DSN=your_sentry_dsn
 LOGFLARE_API_KEY=your_logflare_api_key
 
+# Redis Configuration
+REDIS_URL=redis://localhost:6379
+REDIS_PASSWORD=hyperindex_secure_password
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_DB=0
+
 # Environment
 NODE_ENV=development
