Add trading simulator, v2 APIs, and cleanup docs
Introduces new trading simulator routes and pages, v2 trading/order APIs, and supporting utilities. Updates environment variables for HyperEVM, refines Redis and matching engine logic, and adds rate limiter and mock AMM modules. Removes obsolete architecture, analysis, and planning markdown files to streamline documentation.

--- a/.env.example
+++ b/.env.example
@@ -11,9 +11,11 @@ SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
 # Application
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
-# Hyperliquid Configuration
-HYPERLIQUID_RPC_URL=https://api.hyperliquid-testnet.xyz/evm
-HYPERCORE_PRECOMPILE_ADDRESS=0x0000000000000000000000000000000000000808
+# HyperEVM Configuration
+HYPERVM_TESTNET_RPC=https://api.hyperliquid-testnet.xyz/evm
+HYPERVM_MAINNET_RPC=https://api.hyperliquid.xyz/evm
+HYPERVM_TESTNET_CHAIN_ID=998
+HYPERVM_MAINNET_CHAIN_ID=999
 
 # Trading Configuration (for testing - remove in production)
 TEST_WALLET_PRIVATE_KEY=your_test_wallet_private_key
