--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,12 +12,12 @@ services:
       - ./redis.conf:/usr/local/etc/redis/redis.conf
     command: redis-server /usr/local/etc/redis/redis.conf
     environment:
-      - REDIS_PASSWORD=${REDIS_PASSWORD:-Qpdkfjb4749!}
+      - REDIS_PASSWORD=${REDIS_PASSWORD:-hyperindex_secure_password}
     restart: unless-stopped
     networks:
       - hyperindex-network
     healthcheck:
-      test: ["CMD", "redis-cli", "-a", "Qpdkfjb4749!", "ping"]
+      test: ["CMD", "redis-cli", "-a", "${REDIS_PASSWORD:-hyperindex_secure_password}", "ping"]
       interval: 10s
       timeout: 3s
       retries: 3
@@ -29,7 +29,7 @@ services:
     ports:
       - "8081:8081"
     environment:
-      - REDIS_HOSTS=local:redis:6379:0:Qpdkfjb4749!
+      - REDIS_HOSTS=local:redis:6379:0:${REDIS_PASSWORD:-hyperindex_secure_password}
     depends_on:
       - redis
     restart: unless-stopped
