--- a/package.json
+++ b/package.json
@@ -7,11 +7,18 @@
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
-    "redis:start": "./scripts/start-redis.sh",
+    "redis:start": "docker-compose up -d",
     "redis:stop": "docker-compose down",
     "redis:logs": "docker-compose logs -f redis",
     "redis:cli": "docker exec -it hyperindex-redis redis-cli -a hyperindex_secure_password",
-    "redis:test": "curl http://localhost:3000/api/redis/test"
+    "redis:test": "curl http://localhost:3000/api/redis/test",
+    "hardhat:compile": "hardhat compile",
+    "hardhat:test": "hardhat test",
+    "deploy:testnet": "hardhat run scripts/deploy-amm.js --network hypervm-testnet",
+    "deploy:mainnet": "hardhat run scripts/deploy-amm.js --network hypervm-mainnet",
+    "verify:testnet": "hardhat verify --network hypervm-testnet",
+    "start:testnet": "NODE_ENV=testnet npm run dev",
+    "setup:testnet": "npm run deploy:testnet && npm run start:testnet"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -55,6 +62,8 @@
     "embla-carousel-react": "8.5.1",
     "ethers": "^6.13.2",
     "framer-motion": "^12.23.6",
+    "@wagmi/core": "^2.13.4",
+    "@wagmi/connectors": "^5.1.0",
     "input-otp": "1.4.1",
     "ioredis": "^5.7.0",
     "jose": "^5.2.0",
