--- a/redis.conf
+++ b/redis.conf
@@ -5,7 +5,7 @@
 bind 0.0.0.0
 port 6379
 protected-mode yes
-requirepass Qpdkfjb4749!
+requirepass hyperindex_secure_password
 
 # Memory settings
 maxmemory 2gb
