Add blockchain services and Privy JWT auth modules
Introduces new modules for Arbitrum deposit, Hyperliquid bridge, withdrawal, and balance services under lib/blockchain. Adds Privy JWT authentication utilities and related middleware. Updates Docker and compose files to use a mock standalone API for development. Also includes new configuration, monitoring, orderbook, security, supabase, trading, and utility modules to support multi-network trading and enhanced security features.

--- a/docker-compose.hooats.yml
+++ b/docker-compose.hooats.yml
@@ -68,7 +68,7 @@ services:
     volumes:
       # 개발시 코드 변경사항을 실시간 반영 (선택사항)
       - ./lib:/app/lib
-      - ./standalone-api.js:/app/standalone-api.js
+      - ./standalone-api-mock.cjs:/app/standalone-api-mock.cjs
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:3000/api/health"]
       interval: 30s
