--- a/Dockerfile.standalone
+++ b/Dockerfile.standalone
@@ -33,8 +33,7 @@ RUN pnpm install --frozen-lockfile
 # 소스 코드 복사
 COPY . .
 
-# TypeScript 컴파일 (필요한 모듈들만)
-RUN npx tsc --build --force || echo "TypeScript compilation completed with warnings"
+# Skip TypeScript compilation for mock version
 
 # 환경 변수 설정
 ENV NODE_ENV=development
@@ -47,5 +46,5 @@ EXPOSE 3000
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
   CMD curl -f http://localhost:3000/api/health || exit 1
 
-# standalone-api.js 실행
-CMD ["node", "standalone-api.js"]
+# standalone-api-mock.cjs 실행 (Mock HOOATS)
+CMD ["node", "standalone-api-mock.cjs"]
