--- a/tsconfig.standalone.json
+++ b/tsconfig.standalone.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es2020",
-    "module": "commonjs",
+    "target": "es2022",
+    "module": "ESNext",
     "lib": ["es2020"],
     "allowJs": true,
     "skipLibCheck": true,
@@ -14,6 +14,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "moduleResolution": "node",
+    "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": false,
     "jsx": "preserve",
@@ -25,6 +26,7 @@
   },
   "include": [
     "standalone-api.ts",
+    "standalone-api-esm.ts",
     "lib/**/*"
   ],
   "exclude": [
