--- a/tsconfig.standalone.json
+++ b/tsconfig.standalone.json
@@ -9,6 +9,7 @@
     "noImplicitAny": false,
     "forceConsistentCasingInFileNames": true,
     "noEmit": false,
+    "outDir": "./dist",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
