--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev",
+    "dev": "NODE_OPTIONS='--max-old-space-size=8192' next dev --turbopack",
+    "dev:legacy": "NODE_OPTIONS='--max-old-space-size=8192' next dev",
     "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
+    "@floating-ui/react": "^0.27.15",
+    "@floating-ui/react-dom": "^2.1.5",
     "@headlessui/react": "^2.2.4",
     "@hookform/resolvers": "^3.9.1",
+    "@playwright/test": "^1.55.0",
     "@privy-io/react-auth": "^2.17.3",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
@@ -44,6 +48,7 @@
     "@supabase/supabase-js": "^2.51.0",
     "@tabler/icons-react": "^3.34.0",
     "@tanstack/react-query": "^5.83.0",
+    "@tanstack/react-query-devtools": "^5.85.5",
     "@tsparticles/engine": "^3.8.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.8.1",
@@ -58,8 +63,11 @@
     "date-fns": "4.1.0",
     "dotted-map": "^2.2.3",
     "embla-carousel-react": "8.5.1",
+    "framer-motion": "^12.23.12",
     "input-otp": "1.4.1",
+    "jose": "^6.0.12",
     "jsonwebtoken": "^9.0.2",
+    "lightweight-charts": "^5.0.8",
     "lucide-react": "^0.454.0",
     "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.23.0",
