--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "NODE_OPTIONS='--max-old-space-size=8192' next dev --turbopack",
-    "dev:legacy": "NODE_OPTIONS='--max-old-space-size=8192' next dev",
+    "dev": "NODE_OPTIONS='--max-old-space-size=4096' next dev --turbopack",
+    "dev:webpack": "NODE_OPTIONS='--max-old-space-size=4096' next dev",
+    "dev:light": "NODE_OPTIONS='--max-old-space-size=2048' next dev",
     "lint": "next lint",
     "start": "next start"
   },
