--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "date-fns": "4.1.0",
     "dotted-map": "^2.2.3",
     "embla-carousel-react": "8.5.1",
+    "ethers": "^6.15.0",
     "framer-motion": "^12.23.12",
     "input-otp": "1.4.1",
     "jose": "^6.0.12",
