--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@radix-ui/react-visually-hidden": "^1.2.3",
     "@react-three/drei": "^10.5.0",
     "@react-three/fiber": "9.0.0-alpha.8",
     "@supabase/supabase-js": "^2.51.0",
@@ -62,6 +63,7 @@
     "cobe": "^0.6.4",
     "copy-to-clipboard": "^3.3.3",
     "date-fns": "4.1.0",
+    "dotenv": "^17.2.3",
     "dotted-map": "^2.2.3",
     "embla-carousel-react": "8.5.1",
     "ethers": "^6.15.0",
