--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@floating-ui/react-dom": "^2.1.5",
     "@headlessui/react": "^2.2.4",
     "@hookform/resolvers": "^3.9.1",
+    "@nktkas/hyperliquid": "^0.24.3",
     "@playwright/test": "^1.55.0",
     "@privy-io/react-auth": "^2.17.3",
     "@radix-ui/react-accordion": "1.2.2",
