--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "motion": "^12.23.0",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
+    "node-cache": "^5.1.2",
     "qss": "^3.0.0",
     "react": "^19",
     "react-day-picker": "8.10.1",
