--- a/package.json
+++ b/package.json
@@ -116,6 +116,8 @@
     "@types/react-dom": "^19",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@types/three": "^0.178.0",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "15.5.6",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
